--- a/src/Styles/HomePage.css
+++ b/src/Styles/HomePage.css
@@ -1,14 +1,18 @@
 .home-page {
-  padding: 2rem;
+  padding: 3rem;
   text-align: center;
 }
 
-.home-page h1 {
-  font-size: 2.5rem;
+.home-page h2 {
+  font-size: 4rem;
   color: #4a90e2;
 }
 
-.home-page p {
-  font-size: 1.2rem;
+.home-page  h1{
+  font-size: 3rem;
   margin-top: 1rem;
+}
+
+.home-page p{
+  font-size: 1.8rem;
 }
